feat: Implement TLS Handshake Audit with Named Group Capture
- Removed demo-only X.509 validation properties from application properties.
- Introduced CapturingTomcatSslContext to wrap SSLContext for capturing negotiated named groups.
- Added NegotiatedNamedGroupCaptureSupport to handle capturing and storing negotiated named groups during TLS handshakes.
- Created ServerTlsHandshakeAuditFilter to emit audit events for TLS handshakes, including negotiated named groups and other relevant details.
- Developed TlsHandshakeAuditEvent for structured logging of TLS handshake information.
- Implemented TomcatNegotiatedNamedGroupCaptureInitializer to integrate the capturing context into Tomcat's SSL configuration.
- Added unit tests for NegotiatedNamedGroupCaptureSupport to ensure correct functionality and behavior.